--- a/README
+++ b/README
@@ -1,256 +1,121 @@
-== Welcome to Rails
+PunchBowl
+=======
 
-Rails is a web-application framework that includes everything needed to create
-database-backed web applications according to the Model-View-Control pattern.
+Installation
+--------
+  git clone git@github.com:aaronworsham/punchbowl.git
+  rake db:create
+  rake db:migrate
+  script/server start
 
-This pattern splits the view (also called the presentation) into "dumb"
-templates that are primarily responsible for inserting pre-built data in between
-HTML tags. The model contains the "smart" domain objects (such as Account,
-Product, Person, Post) that holds all the business logic and knows how to
-persist themselves to a database. The controller handles the incoming requests
-(such as Save New Account, Update Product, Show Post) by manipulating the model
-and directing data to the view.
+Service
+-------
 
-In Rails, the model is handled by what's called an object-relational mapping
-layer entitled Active Record. This layer allows you to present the data from
-database rows as objects and embellish these data objects with business logic
-methods. You can read more about Active Record in
-link:files/vendor/rails/activerecord/README.html.
+PunchBowl is a web application service that functions in two modes
 
-The controller and view are handled by the Action Pack, which handles both
-layers by its two parts: Action View and Action Controller. These two layers
-are bundled in a single package due to their heavy interdependence. This is
-unlike the relationship between the Active Record and Action Pack that is much
-more separate. Each of these packages can be used independently outside of
-Rails. You can read more about Action Pack in
-link:files/vendor/rails/actionpack/README.html.
+1. Authenticate A new customer to PB
+2. Post for an authenticated customer a message to Twitter and/or Facebook
+3. Return customer information for a given UUID
 
+It capacity to know a unique customer is based on the usage of a UUID.  The UUID is used to look up a customer record and,
+if missing, create a new customer.  Customer records have an ID as the primary key but use UUID to scope all queries.
 
-== Getting Started
+When a Post is requested of the service for a given UUID, and that customer can be located, an HTTP POST is send from the
+service to Facebook, Twitter or both (in that order) with the following information
 
-1. At the command prompt, create a new Rails application:
-       <tt>rails new myapp</tt> (where <tt>myapp</tt> is the application name)
+1. Message
+2. Token
+3. Client Key
+4. Client Secret
 
-2. Change directory to <tt>myapp</tt> and start the web server:
-       <tt>cd myapp; rails server</tt> (run with --help for options)
+Both Twitter and Facebook are being interfaced with OAUTH authentication protocols.  When successful, a message is sent to the 
+social network as if posted by the user.
 
-3. Go to http://localhost:3000/ and you'll see:
-       "Welcome aboard: You're riding Ruby on Rails!"
+Authenication
+------
 
-4. Follow the guidelines to start developing your application. You can find
-the following resources handy:
+OAUTH has a protocol that follows a subscribed set of stems to authenticate a user.  Implimentation of OAUTH for Facebook and Twitter
+are slightly different and so the PB web service has been tweeked to support those differences
 
-* The Getting Started Guide: http://guides.rubyonrails.org/getting_started.html
-* Ruby on Rails Tutorial Book: http://www.railstutorial.org/
+*Common to Both* - To authenticate a user, one must be in a web browser in full screen and see the address bar.  This is done to prevent
+phishing scams.  Within the requesting url will be the following
 
+1. Client Key
+2. Access Level
+3. redirect url
 
-== Debugging Rails
+If the user of the social network is not currently logged in, they will be asked to do so.  Once logged in, a page will show the request
+from the client API key to access that users account at the specified access level.  If they click 'Accept', a response is sent back to
+the redirect url with a session token
 
-Sometimes your application goes wrong. Fortunately there are a lot of tools that
-will help you debug it and get it back on the rails.
+*Facebook* - Facebook will then need to pull out that session token and ask for a auth token.  Once the token is returned it is saved with the
+customer account
 
-First area to check is the application log files. Have "tail -f" commands
-running on the server.log and development.log. Rails will automatically display
-debugging and runtime information to these files. Debugging info will also be
-shown in the browser on requests from 127.0.0.1.
+*Twitter* - Twitter will need a Session Token sent in the first request and stored on the clients cookie in the browser.  it must then be
+retrieved and sent along to get the auth token.
 
-You can also log your own messages directly into the log file from your code
-using the Ruby logger class from inside your controllers. Example:
+Posting
+-----
 
-  class WeblogController < ActionController::Base
-    def destroy
-      @weblog = Weblog.find(params[:id])
-      @weblog.destroy
-      logger.info("#{Time.now} Destroyed Weblog ID ##{@weblog.id}!")
-    end
-  end
-
-The result will be a message in your log file along the lines of:
-
-  Mon Oct 08 14:22:29 +1000 2007 Destroyed Weblog ID #1!
-
-More information on how to use the logger is at http://www.ruby-doc.org/core/
-
-Also, Ruby documentation can be found at http://www.ruby-lang.org/. There are
-several books available online as well:
-
-* Programming Ruby: http://www.ruby-doc.org/docs/ProgrammingRuby/ (Pickaxe)
-* Learn to Program: http://pine.fm/LearnToProgram/ (a beginners guide)
-
-These two books will bring you up to speed on the Ruby language and also on
-programming in general.
+Once you have an auth token, you are permitted to send a message to the social network on the users behalf, even while they are offline.
 
 
-== Debugger
+API
+-----
 
-Debugger support is available through the debugger command when you start your
-Mongrel or WEBrick server with --debugger. This means that you can break out of
-execution at any point in the code, investigate and change the model, and then,
-resume execution! You need to install ruby-debug to run the server in debugging
-mode. With gems, use <tt>sudo gem install ruby-debug</tt>. Example:
+PB is written to expect HTTP POST requests with JSON data.  A javascript library has been written to help intergrate a system to use 
+PB, located /public/javascripts/jquery.punchbowl.js.  
 
-  class WeblogController < ActionController::Base
-    def index
-      @posts = Post.find(:all)
-      debugger
-    end
-  end
+Quick explanation of what is happening in this script
 
-So the controller will accept the action, run the first line, then present you
-with a IRB prompt in the server window. Here you can do things like:
+First, it is used in javascript like this
 
-  >> @posts.inspect
-  => "[#<Post:0x14a6be8
-          @attributes={"title"=>nil, "body"=>nil, "id"=>"1"}>,
-       #<Post:0x14a6620
-          @attributes={"title"=>"Rails", "body"=>"Only ten..", "id"=>"2"}>]"
-  >> @posts.first.title = "hello from a debugger"
-  => "hello from a debugger"
+var x = new Punchbowl({uuid : uuid_from_flex_client, testMode : true})
 
-...and even better, you can examine how your runtime objects actually work:
+Then you can call functions on the x javascript object this way
 
-  >> f = @posts.first
-  => #<Post:0x13630c4 @attributes={"title"=>nil, "body"=>nil, "id"=>"1"}>
-  >> f.
-  Display all 152 possibilities? (y or n)
+x.profile({function(){ alert('this is a callback once profile returns with data')});
 
-Finally, when you're ready to resume execution, you can enter "cont".
+This call will send a GET with the following data
+- The url is a combination of the base from the settings and the uuid
+- This will return JSON that is parsed automatically by JQuery
+- Note that at the bottom of the js, the get_json function calls _ajax_json_request with the GET param which sets up the call to use the following
+                xhrObj.setRequestHeader("Content-Type","application/json");
+                xhrObj.setRequestHeader("Accept","application/json");
+these tell the Rails app that this is a json request
+
+Data back:
+{"created_at":"May 30, 2011 00:45","last_post":{"created_at":"May 30, 2011 00:48","message":"bob"},
+"existing_user":true,"number_of_posts":1,"uuid":3,"updated_at":"May 30, 2011 00:46","id":53,"facebook":
+{"token":null,"green_lit?":false,"opt_in":true},"last_error":null,"twitter":{"token":null,"green_lit?":false,"opt_in":false}}
 
 
-== Console
+If the profile call cannot locate the uuid, it will return {new_user : true} and you can follow that call with the create_profile call
+x.create_profile({function(){ alert('this is a callback once profile returns with data')});
+The data you would pass in is 
+- facebook_user (true/false)  if they checked the checkbox for facebook
+- twitter_user(true/false) if they checked the checkbox for twitter
 
-The console is a Ruby shell, which allows you to interact with your
-application's domain model. Here you'll have all parts of the application
-configured, just like it is when the application is running. You can inspect
-domain models, change values, and save to the database. Starting the script
-without arguments will launch it in the development environment.
+Data Back:
+{"new_user":true,"url":"https://graph.facebook.com/oauth/authorize?scope=email%2Cread_stream%2Cpublish_stream%2Coffline_access&client_id=154629021224817&redirect_uri=http%3A%2F%2Fpunchbowl.dev%2Fcustomers%2F54%2Ffacebook%2Fauth_success"}
 
-To start the console, run <tt>rails console</tt> from the application
-directory.
+On return, you will be given a url to send them to for authentication in the browser.  We will have to set 
+up some signaling to tell the app when this is user is finally authenticated.  Then you can send the post
 
-Options:
+Once we have a user and they are green_lit for facebook  and/or twitter we can send a post
 
-* Passing the <tt>-s, --sandbox</tt> argument will rollback any modifications
-  made to the database.
-* Passing an environment name as an argument will load the corresponding
-  environment. Example: <tt>rails console production</tt>.
+x.post({message : 'bob'}, function(){console.log('bob')});
 
-To reload your controllers and models after launching the console run
-<tt>reload!</tt>
+There will be more data passed in in the future, but this is enough for now
 
-More information about irb can be found at:
-link:http://www.rubycentral.com/pickaxe/irb.html
+For testing, the data returned is
+{status : tested}
 
+  
+Testing
+------
 
-== dbconsole
+There are both model and integration tests written for PB.  Facebook actually has a more fully fleshed out line of tests because their 
+API accounts support the concept of 'test users' that can be created at the beginning of the test and deleted at the end.  
 
-You can go to the command line of your database directly through <tt>rails
-dbconsole</tt>. You would be connected to the database with the credentials
-defined in database.yml. Starting the script without arguments will connect you
-to the development database. Passing an argument will connect you to a different
-database, like <tt>rails dbconsole production</tt>. Currently works for MySQL,
-PostgreSQL and SQLite 3.
-
-== Description of Contents
-
-The default directory structure of a generated Ruby on Rails application:
-
-  |-- app
-  |   |-- controllers
-  |   |-- helpers
-  |   |-- models
-  |   `-- views
-  |       `-- layouts
-  |-- config
-  |   |-- environments
-  |   |-- initializers
-  |   `-- locales
-  |-- db
-  |-- doc
-  |-- lib
-  |   `-- tasks
-  |-- log
-  |-- public
-  |   |-- images
-  |   |-- javascripts
-  |   `-- stylesheets
-  |-- script
-  |   `-- performance
-  |-- test
-  |   |-- fixtures
-  |   |-- functional
-  |   |-- integration
-  |   |-- performance
-  |   `-- unit
-  |-- tmp
-  |   |-- cache
-  |   |-- pids
-  |   |-- sessions
-  |   `-- sockets
-  `-- vendor
-      `-- plugins
-
-app
-  Holds all the code that's specific to this particular application.
-
-app/controllers
-  Holds controllers that should be named like weblogs_controller.rb for
-  automated URL mapping. All controllers should descend from
-  ApplicationController which itself descends from ActionController::Base.
-
-app/models
-  Holds models that should be named like post.rb. Models descend from
-  ActiveRecord::Base by default.
-
-app/views
-  Holds the template files for the view that should be named like
-  weblogs/index.html.erb for the WeblogsController#index action. All views use
-  eRuby syntax by default.
-
-app/views/layouts
-  Holds the template files for layouts to be used with views. This models the
-  common header/footer method of wrapping views. In your views, define a layout
-  using the <tt>layout :default</tt> and create a file named default.html.erb.
-  Inside default.html.erb, call <% yield %> to render the view using this
-  layout.
-
-app/helpers
-  Holds view helpers that should be named like weblogs_helper.rb. These are
-  generated for you automatically when using generators for controllers.
-  Helpers can be used to wrap functionality for your views into methods.
-
-config
-  Configuration files for the Rails environment, the routing map, the database,
-  and other dependencies.
-
-db
-  Contains the database schema in schema.rb. db/migrate contains all the
-  sequence of Migrations for your schema.
-
-doc
-  This directory is where your application documentation will be stored when
-  generated using <tt>rake doc:app</tt>
-
-lib
-  Application specific libraries. Basically, any kind of custom code that
-  doesn't belong under controllers, models, or helpers. This directory is in
-  the load path.
-
-public
-  The directory available for the web server. Contains subdirectories for
-  images, stylesheets, and javascripts. Also contains the dispatchers and the
-  default HTML files. This should be set as the DOCUMENT_ROOT of your web
-  server.
-
-script
-  Helper scripts for automation and generation.
-
-test
-  Unit and functional tests along with fixtures. When using the rails generate
-  command, template test files will be generated for you and placed in this
-  directory.
-
-vendor
-  External libraries that the application depends on. Also includes the plugins
-  subdirectory. If the app has frozen rails, those gems also go here, under
-  vendor/rails/. This directory is in the load path.
+  rake spec
